[gd_scene load_steps=83 format=3 uid="uid://dogtmonf6vstv"]

[ext_resource type="Script" path="res://scripts/characters/enemy_samurai.gd" id="1_n3dq6"]
[ext_resource type="Texture2D" uid="uid://b4oywj5cid6v4" path="res://assets/enemies/Cyberpunk Samurai/With Light/Attacks.png" id="2_wuxc1"]
[ext_resource type="Script" path="res://scripts/battle/hurt_box.gd" id="3_0qi0g"]
[ext_resource type="Texture2D" uid="uid://o2glyif88m28" path="res://assets/enemies/Cyberpunk Samurai/With Light/Death.png" id="3_dpqx1"]
[ext_resource type="Texture2D" uid="uid://c5twfe7x84hms" path="res://assets/enemies/Cyberpunk Samurai/With Light/Hit.png" id="4_qeed3"]
[ext_resource type="Script" path="res://scripts/battle/hit_box.gd" id="4_vj7po"]
[ext_resource type="Texture2D" uid="uid://do25ap0ds3hwk" path="res://assets/interface/heart.png" id="5_8btgg"]
[ext_resource type="Texture2D" uid="uid://bdk6r6gxrl0gn" path="res://assets/enemies/Cyberpunk Samurai/With Light/Idle.png" id="5_yksu5"]
[ext_resource type="Texture2D" uid="uid://dop7w6rcxqblu" path="res://assets/enemies/Cyberpunk Samurai/With Light/Jump.png" id="6_vhet3"]
[ext_resource type="Texture2D" uid="uid://ckadrkmobfh80" path="res://assets/enemies/Cyberpunk Samurai/With Light/Land.png" id="7_idngx"]
[ext_resource type="Texture2D" uid="uid://bkpimshxjt3ej" path="res://assets/enemies/Cyberpunk Samurai/With Light/Run.png" id="8_turk7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_oy3on"]
atlas = ExtResource("2_wuxc1")
region = Rect2(0, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_4q7sv"]
atlas = ExtResource("2_wuxc1")
region = Rect2(96, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_7cdhy"]
atlas = ExtResource("2_wuxc1")
region = Rect2(192, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_aus70"]
atlas = ExtResource("2_wuxc1")
region = Rect2(288, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0u2k"]
atlas = ExtResource("2_wuxc1")
region = Rect2(384, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_mime7"]
atlas = ExtResource("2_wuxc1")
region = Rect2(480, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_f7wd2"]
atlas = ExtResource("2_wuxc1")
region = Rect2(576, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_00yp6"]
atlas = ExtResource("2_wuxc1")
region = Rect2(672, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_uur7d"]
atlas = ExtResource("2_wuxc1")
region = Rect2(768, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3lv4"]
atlas = ExtResource("3_dpqx1")
region = Rect2(0, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_bkimj"]
atlas = ExtResource("3_dpqx1")
region = Rect2(96, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_per2b"]
atlas = ExtResource("3_dpqx1")
region = Rect2(192, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_fohhp"]
atlas = ExtResource("3_dpqx1")
region = Rect2(288, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_gyw16"]
atlas = ExtResource("3_dpqx1")
region = Rect2(384, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_57vix"]
atlas = ExtResource("3_dpqx1")
region = Rect2(480, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_muu1u"]
atlas = ExtResource("3_dpqx1")
region = Rect2(576, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_51ai4"]
atlas = ExtResource("4_qeed3")
region = Rect2(0, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_i35gm"]
atlas = ExtResource("4_qeed3")
region = Rect2(96, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_s2pvn"]
atlas = ExtResource("4_qeed3")
region = Rect2(192, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_udukd"]
atlas = ExtResource("5_yksu5")
region = Rect2(0, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_c40ny"]
atlas = ExtResource("5_yksu5")
region = Rect2(96, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_7cei4"]
atlas = ExtResource("5_yksu5")
region = Rect2(192, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_de416"]
atlas = ExtResource("5_yksu5")
region = Rect2(288, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0kjv"]
atlas = ExtResource("5_yksu5")
region = Rect2(384, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ay2wy"]
atlas = ExtResource("6_vhet3")
region = Rect2(0, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2h8e4"]
atlas = ExtResource("6_vhet3")
region = Rect2(96, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_8r5dh"]
atlas = ExtResource("6_vhet3")
region = Rect2(192, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_63gbp"]
atlas = ExtResource("7_idngx")
region = Rect2(0, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_x80sc"]
atlas = ExtResource("7_idngx")
region = Rect2(96, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_meqqb"]
atlas = ExtResource("7_idngx")
region = Rect2(192, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_km81u"]
atlas = ExtResource("8_turk7")
region = Rect2(0, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_rll21"]
atlas = ExtResource("8_turk7")
region = Rect2(96, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_wiw87"]
atlas = ExtResource("8_turk7")
region = Rect2(192, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_m043w"]
atlas = ExtResource("8_turk7")
region = Rect2(288, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rdnc"]
atlas = ExtResource("8_turk7")
region = Rect2(384, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_0djs3"]
atlas = ExtResource("8_turk7")
region = Rect2(480, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1kfs"]
atlas = ExtResource("8_turk7")
region = Rect2(576, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_235cb"]
atlas = ExtResource("8_turk7")
region = Rect2(672, 0, 96, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_3off4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oy3on")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4q7sv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7cdhy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aus70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0u2k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mime7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7wd2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00yp6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uur7d")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3lv4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkimj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_per2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fohhp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gyw16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_57vix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_muu1u")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_51ai4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i35gm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s2pvn")
}],
"loop": true,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_udukd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c40ny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7cei4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_de416")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0kjv")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ay2wy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2h8e4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8r5dh")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_63gbp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x80sc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_meqqb")
}],
"loop": true,
"name": &"land",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_km81u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rll21")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wiw87")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m043w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rdnc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0djs3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1kfs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_235cb")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_316hr"]
resource_name = "new_animation"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true]
}

[sub_resource type="Animation" id="Animation_etw4y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_mxkuk"]
resource_name = "idle"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_k64lc"]
resource_name = "run"
length = 0.7
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"run"]
}

[sub_resource type="Animation" id="Animation_3e40w"]
resource_name = "hit"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"hit"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_5m2s5"]
resource_name = "jump"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"jump"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 2]
}

[sub_resource type="Animation" id="Animation_s0tjf"]
resource_name = "land"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"land"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7030k"]
_data = {
"RESET": SubResource("Animation_etw4y"),
"attack": SubResource("Animation_316hr"),
"hit": SubResource("Animation_3e40w"),
"idle": SubResource("Animation_mxkuk"),
"jump": SubResource("Animation_5m2s5"),
"land": SubResource("Animation_s0tjf"),
"run": SubResource("Animation_k64lc")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_a3npt"]
animation = &"attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6785l"]
animation = &"hit"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_naep7"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kemev"]
animation = &"jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_p88vl"]
animation = &"run"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8eep6"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2816l"]
advance_mode = 2
advance_condition = &"is_running"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_na8ra"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_m6he4"]
advance_mode = 2
advance_condition = &"is_attacking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tmuhf"]
switch_mode = 2
advance_mode = 2
advance_condition = &"is_running"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_x17x4"]
switch_mode = 2
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_aayde"]
advance_mode = 2
advance_condition = &"is_attacking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fb2ic"]
advance_mode = 2
advance_condition = &"damaged"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_iek71"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kiq2u"]
advance_mode = 2
advance_condition = &"is_attacking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_y12s0"]
switch_mode = 2
advance_mode = 2
advance_condition = &"jumping"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_f7xs5"]
advance_mode = 2
advance_condition = &"on_floor"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hlcf7"]
advance_mode = 2
advance_condition = &"jumping"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_gp08u"]
states/Start/position = Vector2(179, 100)
states/attack/node = SubResource("AnimationNodeAnimation_a3npt")
states/attack/position = Vector2(492, -24)
states/hit/node = SubResource("AnimationNodeAnimation_6785l")
states/hit/position = Vector2(406, 199)
states/idle/node = SubResource("AnimationNodeAnimation_naep7")
states/idle/position = Vector2(325, 100)
states/jump/node = SubResource("AnimationNodeAnimation_kemev")
states/jump/position = Vector2(325, -24)
states/run/node = SubResource("AnimationNodeAnimation_p88vl")
states/run/position = Vector2(492, 100)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_8eep6"), "idle", "run", SubResource("AnimationNodeStateMachineTransition_2816l"), "run", "idle", SubResource("AnimationNodeStateMachineTransition_na8ra"), "run", "attack", SubResource("AnimationNodeStateMachineTransition_m6he4"), "attack", "run", SubResource("AnimationNodeStateMachineTransition_tmuhf"), "attack", "idle", SubResource("AnimationNodeStateMachineTransition_x17x4"), "idle", "attack", SubResource("AnimationNodeStateMachineTransition_aayde"), "idle", "hit", SubResource("AnimationNodeStateMachineTransition_fb2ic"), "hit", "idle", SubResource("AnimationNodeStateMachineTransition_iek71"), "jump", "attack", SubResource("AnimationNodeStateMachineTransition_kiq2u"), "attack", "jump", SubResource("AnimationNodeStateMachineTransition_y12s0"), "jump", "idle", SubResource("AnimationNodeStateMachineTransition_f7xs5"), "idle", "jump", SubResource("AnimationNodeStateMachineTransition_hlcf7")]
graph_offset = Vector2(-46, -30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b25qg"]
size = Vector2(31, 29)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ukhxd"]
size = Vector2(31, 29)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5s0sa"]
radius = 9.0
height = 34.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d8ify"]
bg_color = Color(0.226707, 0.226708, 0.226707, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ps4dc"]
bg_color = Color(1, 0.151344, 0.108333, 1)

[node name="EnemySamurai" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 2
script = ExtResource("1_n3dq6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_3off4")
animation = &"attack"
autoplay = "idle"

[node name="RayCast2D" type="RayCast2D" parent="AnimatedSprite2D"]
target_position = Vector2(156, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7030k")
}
autoplay = "idle"

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_gp08u")
parameters/conditions/damaged = false
parameters/conditions/idle = false
parameters/conditions/is_attacking = false
parameters/conditions/is_running = false
parameters/conditions/jumping = false
parameters/conditions/on_floor = false

[node name="ChaseTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visibility_layer = 3
position = Vector2(0, 10)
shape = SubResource("RectangleShape2D_b25qg")
disabled = true

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
script = ExtResource("3_0qi0g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, 10)
shape = SubResource("RectangleShape2D_ukhxd")

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource("4_vj7po")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(28, 9)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_5s0sa")

[node name="Health" type="Control" parent="."]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -3.0
offset_top = -17.5
offset_right = 37.0
offset_bottom = 22.5
grow_horizontal = 2
scale = Vector2(0.1, 0.1)

[node name="ProgressBar" type="ProgressBar" parent="Health"]
layout_mode = 0
offset_left = -120.0
offset_top = 55.0
offset_right = 172.0
offset_bottom = 84.0
theme_override_styles/background = SubResource("StyleBoxFlat_d8ify")
theme_override_styles/fill = SubResource("StyleBoxFlat_ps4dc")
value = 50.0
show_percentage = false

[node name="Border" type="ColorRect" parent="Health"]
z_index = -15
layout_mode = 0
offset_left = -130.0
offset_top = 45.0
offset_right = 180.0
offset_bottom = 87.0
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="Health"]
layout_mode = 0
offset_left = -210.0
offset_top = 45.0
offset_right = 390.0
offset_bottom = 645.0
scale = Vector2(0.1, 0.1)
texture = ExtResource("5_8btgg")

[node name="Label" type="Label" parent="Health"]
visible = false
z_index = 2
layout_mode = 0
offset_left = -14.0
offset_top = 20.0
offset_right = 80.0
offset_bottom = 48.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "100/100"

[connection signal="timeout" from="ChaseTimer" to="." method="_on_chase_timer_timeout"]
